# SPI

./: .cproject  .project  LICENSE.md  README.md  SPI.cpp  SPI.h  SPIIMXRT1176.cpp  SPIIMXRT1176.h  lpspi1176.c  lpspi1176.h
tests/spi_dma_test/: CMakeLists.txt  run_qemu_spidma.sh
tests/spi_loopback_test/: CMakeLists.txt  run_qemu_spi.sh
tests/st7735_test/: CMakeLists.txt  st7735_test.cpp
tests/st7735_test/toolchain/: rt1170-evkb.toolchain.cmake
